--- a/Identity/college-motto-and-flag_colours.html
+++ b/Identity/college-motto-and-flag_colours.html
@@ -56,7 +56,7 @@
                         <div class="collapse navbar-collapse">
                             <ul class="nav navbar-nav">
                                 <li class="active">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Institute <b class="caret"></b></a>
+                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">About us <b class="caret"></b></a>
                                     <ul class="dropdown-menu multi-level">
                                         <li><a href="../about.html">About</a></li>
                                         <li class="dropdown-submenu active">
@@ -64,8 +64,8 @@
                                             <ul class="dropdown-menu">
                                                 <li><a href="mission-vision.html">Vision & Mission</a></li>
                                                 <li class="active"><a href="college-motto-and-flag_colours.html">College Motto | Flag & Colours</a></li>
-                                                <li><a href="germi.html">GERMI</a></li>
-                                                <li><a href="tcs.html">TCS</a></li>
+                                                <li><a href="germi.html">College Crest</a></li>
+                                                <li><a href="tcs.html">College Anthem</a></li>
                                             </ul>
                                         </li>
                                         <li><a href="../directors_message.html">Director's Message</a></li>
