--- a/staff.html
+++ b/staff.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>IIIT-V | Staff</title>
+    <title>De La Salle College Colombo 15 | Staff</title>
     <!--Style Starts-->
     <link rel="icon" type="image/png" href="img/IIITV_Logo_1x1_small.png">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
@@ -33,9 +33,9 @@
                         </div>
                     </div>
                     <div class="header-links">
-                        <a href="#" data-toggle="popover" title="Address" data-content="c/o Block No.9 (IC Department), Government Engineering College, Sector-28, Gandhinagar, Gujarat - 382028" data-placement="bottom"><i class="fa fa-map-marker fa-lg" aria-hidden="true"></i></a>
+                        <a href="#" data-toggle="popover" title="Address" data-content="c/o 130, De La Salle Street, Mutwal 01500 Colombo, Sri Lanka" data-placement="bottom"><i class="fa fa-map-marker fa-lg" aria-hidden="true"></i></a>
                         <a href="#" data-toggle="popover" title="Phone No." data-content="+91-79-29750281" data-placement="bottom"><i class="fa fa-phone fa-lg" aria-hidden="true"></i></a>
-                        <a href="#" data-toggle="popover" title="Email" data-content="helpdesk@iiitvadodara.ac.in" data-placement="bottom"><i class="fa fa-envelope fa-lg" aria-hidden="true"></i></a>
+                        <a href="#" data-toggle="popover" title="Email" data-content="college@delasalle.lk" data-placement="bottom"><i class="fa fa-envelope fa-lg" aria-hidden="true"></i></a>
                     </div>
                 </div>
             </div>
@@ -258,7 +258,7 @@
                 <span class="logo"><img src="img/IIITV_Logo_1x1_small.png" alt=""></span>
                 <div class="row">
                     <div class="col-sm-4 address">
-                        <strong>Address : </strong>c/o Block No.9 (IC Department), Government Engineering College, Sector-28, Gandhinagar, Gujarat - 382028
+                        <strong>Address : </strong>c/o 130, De La Salle Street, Mutwal 01500 Colombo, Sri Lanka
                     </div>
                     <div class="col-sm-4 links">
                         <div>
@@ -286,7 +286,7 @@
                     <div class="col-sm-4 footer-social">
                         <a href="#!"><i class="fa fa-facebook" aria-hidden="true"
                                         title="Official Facebook Page"></i></a>
-                        <a href="https://github.com/iiitv"><i class="fa fa-github" aria-hidden="true"
+                        <a href="https://github.com/kasuncfdo"><i class="fa fa-github" aria-hidden="true"
                                                               title="Github Group"></i></a>
                         <a href="#!"><i class="fa fa-linkedin" aria-hidden="true" title="LinkedIn Profile"></i></a>
                         <a href="#!" title=""><i class="fa fa-twitter" aria-hidden="true"
