--- a/Identity/college-crest.html
+++ b/Identity/college-crest.html
@@ -78,12 +78,12 @@
                                         <li><a href="../pdf/MOU.pdf">MOU</a></li>
                                         <li><a href="../pdf/IIITV-Regulations.pdf">Rules and Regulations</a></li>
                                         <!--li class="dropdown-submenu active">
-                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">IDENTITY</a>
+                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">HISTORY AND TRADITIONS</a>
                                             <ul class="dropdown-menu">
-                                                <li class="active"><a href="mission-vision.html">Vission & Mission</a></li>
-                                                <li><a href="gsfc.html">GSFC</a></li>
-                                                <li><a href="germi.html">GERMI</a></li>
-                                                <li><a href="tcs.html">TCS</a></li>
+                                                <li class="active"><a href="mission-vision.html">History of College</a></li>
+                                                <li><a href="gsfc.html">The-Coat-of-Arm</a></li>
+                                                <li><a href="germi.html">Chronology College History</a></li>
+                                                <li><a href="tcs.html">Past Rectors</a></li>
                                             </ul>
                                         </li-->
                                     </ul>
