--- a/History-and-Location.html
+++ b/History-and-Location.html
@@ -81,14 +81,13 @@
                                                 <li><a href="college-anthem.html">College Anthem</a></li>
                                             </ul>
                                         </li>
-                                        <li class="dropdown-submenu">
+                                        <li class="dropdown-submenu active">
                                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">HISTORY AND TRADITIONS</a>
                                             <ul class="dropdown-menu">
-                                                <li class="active"><a href="History-and-Location.html">History Of College</a></li>
-                                                <li><a href="The-Coat-of-Arms.html">The-Coat-of-Arms</a></li>
-                                                <li><a href="#">Chronology College History</a></li>
-                                                <li><a href="College-Directors.html">Past Recters</a></li>
-                                                <!--li><a href="Identity/tcs.html">TCS</a></li-->
+                                                <li class="active"><a href="History-and-Location.html">History of College</a></li>
+                                                <li><a href="The-Coat-of-Arms.html">The-Coat-of-Arm</a></li>
+                                                <li><a href="germi.html">Chronology College History</a></li>
+                                                <li><a href="College-Directors.html">Past Rectors</a></li>
                                             </ul>
                                         </li>
     
