--- a/Chronoloy-College-History.html
+++ b/Chronoloy-College-History.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>De La Salle College Colombo 15 | BRIEF HISTORY OF THE COLLEGE </title>
+    <title>De La Salle College Colombo 15 | Chronology HISTORY OF THE COLLEGE </title>
     <!--Style Starts-->
     <link rel="icon" type="image/png" href="img/IIITV_Logo_1x1_small.png">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,700' rel='stylesheet' type='text/css'>
