--- a/Chronoloy-College-History.html
+++ b/Chronoloy-College-History.html
@@ -82,7 +82,7 @@
     
                                         <li><a href="directors_message.html">Director's Message</a></li>
                                         <li><a href="College-Directors.html">College Directors</a></li>
-                                        <li><a href="Chronology College History.html">Chronology College History</a></li>
+                                        <li><a href="Chronoloy-College-History.html">Chronology College History</a></li>
                                         <li><a href="Academics.php.html">Academic Council</a></li>
                                         <li class="active"><a href="Academic-Progress.html">Academic Progress</a></li>
                                         <li><a href="Activities-in-Development-Stage.html">Activities in Development Stage</a></li>
