--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                                         <ul class="dropdown-menu">
                                             <li><a href="History-and-Location.html">History Of College</a></li>
                                             <li><a href="The-Coat-of-Arms.html">The-Coat-of-Arms</a></li>
-                                            <li><a href="#">Chronology College History</a></li>
+                                            <li><a href="Chronoloy-College-History.html">Chronology College History</a></li>
                                             <li><a href="College-Directors.html">Past Recters</a></li>
                                             <!--li><a href="Identity/tcs.html">TCS</a></li-->
                                         </ul>
