--- a/Identity/college-motto-and-flag_colours.html
+++ b/Identity/college-motto-and-flag_colours.html
@@ -76,7 +76,7 @@
                                         <li><a href="../pdf/MOU.pdf">MOU</a></li>
                                         <li><a href="../pdf/IIITV-Regulations.pdf">Rules and Regulations</a></li>
                                         <!--li class="dropdown-submenu active">
-                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Linkages</a>
+                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Test</a>
                                             <ul class="dropdown-menu">
                                                 <li><a href="da-iict.html">DA-IICT</a></li>
                                                 <li class="active"><a href="gsfc.html">GSFC</a></li>
