--- a/The-Coat-of-Arms.html
+++ b/The-Coat-of-Arms.html
@@ -71,14 +71,13 @@
                                             <li><a href="college-anthem.html">College Anthem</a></li>
                                         </ul>
                                     </li>
-                                    <li class="dropdown-submenu">
+                                    <li class="dropdown-submenu active">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">HISTORY AND TRADITIONS</a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="History-and-Location.html">History Of College</a></li>
-                                            <li><a href="The-Coat-of-Arms.html">The-Coat-of-Arms</a></li>
-                                            <li><a href="#">Chronology College History</a></li>
-                                            <li><a href="College-Directors.html">Past Recters</a></li>
-                                            <!--li><a href="Identity/tcs.html">TCS</a></li-->
+                                            <li><a href="History-and-Location.html">History of College</a></li>
+                                            <li class="active"><a href="The-Coat-of-Arms.html">The-Coat-of-Arm</a></li>
+                                            <li><a href="germi.html">Chronology College History</a></li>
+                                            <li><a href="College-Directors.html">Past Rectors</a></li>
                                         </ul>
                                     </li>
 
@@ -86,7 +85,7 @@
                                     <li><a href="College-Directors.html">College Directors</a></li>
                                     <li><a href="Chronology College History.html">Chronology College History</a></li>
                                     <li><a href="Academics.php.html">Academic Council</a></li>
-                                    <li class="active"><a href="Academic-Progress.html">Academic Progress</a></li>
+                                    <li><a href="Academic-Progress.html">Academic Progress</a></li>
                                     <li><a href="Activities-in-Development-Stage.html">Activities in Development Stage</a></li>
                                     <li><a href="The-Coat-of-Arms.html">The Coat of Arms o  the  De La Salle  Brothers</a></li>
                                     <li><a href="Bridge-between-the-College-and-the-Old-Boys.html">Bridge between the College and the Old-Boys</a></li>
