--- a/History-and-Location.html
+++ b/History-and-Location.html
@@ -86,7 +86,7 @@
                                             <ul class="dropdown-menu">
                                                 <li class="active"><a href="History-and-Location.html">History of College</a></li>
                                                 <li><a href="The-Coat-of-Arms.html">The-Coat-of-Arm</a></li>
-                                                <li><a href="germi.html">Chronology College History</a></li>
+                                                <li><a href="Chronoloy-College-History.html">Chronology College History</a></li>
                                                 <li><a href="College-Directors.html">Past Rectors</a></li>
                                             </ul>
                                         </li>
