--- a/The-Coat-of-Arms.html
+++ b/The-Coat-of-Arms.html
@@ -71,12 +71,13 @@
                                             <li><a href="college-anthem.html">College Anthem</a></li>
                                         </ul>
                                     </li>
+                                    
                                     <li class="dropdown-submenu active">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">HISTORY AND TRADITIONS</a>
                                         <ul class="dropdown-menu">
                                             <li><a href="History-and-Location.html">History of College</a></li>
                                             <li class="active"><a href="The-Coat-of-Arms.html">The-Coat-of-Arm</a></li>
-                                            <li><a href="germi.html">Chronology College History</a></li>
+                                            <li><a href="Chronoloy-College-History.html">Chronology College History</a></li>
                                             <li><a href="College-Directors.html">Past Rectors</a></li>
                                         </ul>
                                     </li>
