--- a/College-Directors.html
+++ b/College-Directors.html
@@ -85,7 +85,7 @@
                                     <li><a href="College-Directors.html">College Directors</a></li>
                                     <li><a href="Chronology College History.html">Chronology College History</a></li>
                                     <li><a href="Academics.php.html">Academic Council</a></li>
-                                    <li class="active"><a href="Academic-Progress.html">Academic Progress</a></li>
+                                    <li><a href="Academic-Progress.html">Academic Progress</a></li>
                                     <li><a href="Activities-in-Development-Stage.html">Activities in Development Stage</a></li>
                                     <li><a href="The-Coat-of-Arms.html">The Coat of Arms o  the  De La Salle  Brothers</a></li>
                                     <li><a href="Bridge-between-the-College-and-the-Old-Boys.html">Bridge between the College and the Old-Boys</a></li>
