--- a/College-Directors.html
+++ b/College-Directors.html
@@ -10,7 +10,22 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
+<style>
+    /* Background color */
+body, #container, #banner, #banner-inner { background: #F5F5F5; }
 
+/* Content border */
+#pagebody {
+border: 10px solid #B0C4DE;
+border-radius: 25px;
+padding-left: 8px;
+padding-right: 5px;
+background: #fff;
+}
+
+/* Container width */
+#container { width:1020px; }
+</style>
 <body>
 <!-- Start Your Body Code From here -->
 <div class="wrapper">
