--- a/College-Directors.html
+++ b/College-Directors.html
@@ -25,6 +25,19 @@ background: #fff;
 
 /* Container width */
 #container { width:1020px; }
+
+/* Text banner */
+#banner { height: auto; }
+#banner-inner { 
+position: relative; 
+top: 0;
+padding: 15px 0px 15px 0px;
+border: 0;
+}
+
+/* Hide nav bar */
+#nav { display: none; }
+
 </style>
 <body>
 <!-- Start Your Body Code From here -->
