--- a/College-Directors.html
+++ b/College-Directors.html
@@ -254,6 +254,8 @@ a.active .link-text {
 
     </style>
     <section>
+        </section>
+</body>
         <nav>
             <div class="link-background"></div>
             <ul>
@@ -314,7 +316,9 @@ a.active .link-text {
               <circle fill="none" stroke="" stroke-width="2" stroke-linecap="round" stroke-miterlimit="10" cx="25.5" cy="17" r="9"/>
               </symbol>
           </svg>
+        </html>
     </section>
+    
     <!-- Footer -->
     <footer>
         <div class="footer-wrapper">
