--- a/blog.html
+++ b/blog.html
@@ -174,6 +174,31 @@
                                     <div class="blog-grid">
                                         <div class="blog-img">
                                             <div class="date">
+                                                <span>11</span>
+                                                <label>Nov</label>
+                                            </div>
+                                            <a href="#">
+                                                <img src="Blogs/photo_2021-11-16_01-10-22dlsc.jpg" title="" alt="">
+                                            </a>
+                                        </div>
+                                        <div class="blog-info">
+                                            <h5><a href="#">Nearly after 10 months a Holy Mass offered by senior students of the college,</a></h5>
+                                            <p>Nearly after 10 months a Holy Mass offered by senior students of the college and followed by a Seminar conducted by Faith Animation Team priests headed by Rev Fr Gihan Gunatilleke held on 11th November at the College Chapel.</p>
+                                            <div class="btn-bar">
+                                                <a href="#" class="px-btn-arrow">
+                                                    <span>Read More</span>
+                                                    <i class="arrow"></i>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+
+                                <div class="col-sm-6">
+                                    <div class="blog-grid">
+                                        <div class="blog-img">
+                                            <div class="date">
                                                 <span>18</span>
                                                 <label>OCT</label>
                                             </div>
