--- a/blog.html
+++ b/blog.html
@@ -177,7 +177,7 @@
                                                 <span>11</span>
                                                 <label>Nov</label>
                                             </div>
-                                            <a href="#">
+                                            <a href="https://www.facebook.com/pg/DeLaSalleCollegeColombo/posts/">
                                                 <img src="Blogs/photo_2021-11-16_01-10-22dlsc.jpg" title="" alt="">
                                             </a>
                                         </div>
