--- a/blog.html
+++ b/blog.html
@@ -193,7 +193,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-sm-6">
+                                <!--div class="col-sm-6">
                                     <div class="blog-grid">
                                         <div class="blog-img">
                                             <div class="date">
@@ -215,7 +215,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                </div>
+                                </div-->
                                 <div class="col-sm-6">
                                     <div class="blog-grid">
                                         <div class="blog-img">
