--- a/blog.html
+++ b/blog.html
@@ -376,7 +376,7 @@
                     <div class="col-sm-4 footer-social">
                         <a href="#!"><i class="fa fa-facebook" aria-hidden="true"
                                         title="Official Facebook Page"></i></a>
-                        <a href="https://github.com/iiitv"><i class="fa fa-github" aria-hidden="true"
+                        <a href="https://github.com/kasuncfdo"><i class="fa fa-github" aria-hidden="true"
                                                               title="Github Group"></i></a>
                         <a href="#!"><i class="fa fa-linkedin" aria-hidden="true" title="LinkedIn Profile"></i></a>
                         <a href="#!" title=""><i class="fa fa-twitter" aria-hidden="true"
