--- a/blog.html
+++ b/blog.html
@@ -334,6 +334,8 @@
                             </div>
                         </div>
                     </div>
+                </div>
+        </section>
      <!-- Footer -->
         <footer>
             <div class="footer-wrapper">
