--- a/obu.html
+++ b/obu.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" type="text/css" href="css/scroll.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
-    <style>
+    <!--style>
     
 ul li a {
     text-decoration: none;
@@ -45,7 +45,7 @@ ul a:hover::after {
     transform-origin: bottom left;
     transform: scaleX(1);
 }
-    </style>
+    </style-->
 </head>
 
 <body>
