--- a/Organizational-Structure.html
+++ b/Organizational-Structure.html
@@ -167,7 +167,7 @@
     <div class="contents-wrapper">
         <!-- Contents starts here -->
         <div class="content">
-          <center>  <h1>Organizational Structure</h1> </center>
+          <center>  <h1><strong>Organizational Structure</strong></h1> </center>
             <br/><br/>
             <img class="responsive-img" src="img/Organizational-Structure.jpg">
         </div>
