--- a/student_corner.html
+++ b/student_corner.html
@@ -164,11 +164,10 @@
             <div class="content">
                 <h3>Student's Corner</h3>
                 <br/><br/>
-                <p>
-                    <a href="pdf/IIITV-Regulations.pdf" target="_blank">Rules and Regulations</a>
-                </p>
+                <img class="responsive-img" src="img/Students-Details.jpg">
             </div>
         </div>
+    </div>
         <!-- Footer -->
         <footer>
             <div class="footer-wrapper">
