--- a/student_corner.html
+++ b/student_corner.html
@@ -162,7 +162,7 @@
         <div class="contents-wrapper">
             <!-- Contents starts here -->
             <div class="content">
-                <h3>Student's Corner</h3>
+               <center> <h3><strong>Students Corner</strong></h3> </center>
                 <br/><br/>
                 <img class="responsive-img" src="img/Students-Details.jpg">
             </div>
