--- a/student_corner.html
+++ b/student_corner.html
@@ -26,8 +26,8 @@
                             </div>
                             <div class="name">
                                 <a href="index.html" title="">
-                                    <h5>Indian Institute of Information Technology</h5>
-                                    <h5 class="primary-color">Vadodara</h5>
+                                    <h5>De La Salle College Colombo 15</h5>
+                                    <h5 class="primary-color">Mutwal</h5>
                                 </a>
                             </div>
                         </div>
