--- a/student_corner.html
+++ b/student_corner.html
@@ -34,7 +34,7 @@
                         </div>
                     </div>
                     <div class="header-links">
-                        <a href="#" data-toggle="popover" title="Address" data-content="c/o Block No.9 (IC Department), Government Engineering College, Sector-28, Gandhinagar, Gujarat - 382028" data-placement="bottom"><i class="fa fa-map-marker fa-lg" aria-hidden="true"></i></a>
+                        <a href="#" data-toggle="popover" title="Address" data-content=" c/o 130, De La Salle Street, Mutwal 01500 Colombo, Sri Lanka" data-placement="bottom"><i class="fa fa-map-marker fa-lg" aria-hidden="true"></i></a>
                         <a href="#" data-toggle="popover" title="Phone No." data-content="+91-79-29750281" data-placement="bottom"><i class="fa fa-phone fa-lg" aria-hidden="true"></i></a>
                         <a href="#" data-toggle="popover" title="Email" data-content="helpdesk@iiitvadodara.ac.in" data-placement="bottom"><i class="fa fa-envelope fa-lg" aria-hidden="true"></i></a>
                     </div>
@@ -175,7 +175,7 @@
                 <span class="logo"><img src="img/IIITV_Logo_1x1_small.png" alt=""></span>
                 <div class="row">
                     <div class="col-sm-4 address">
-                        <strong>Address : </strong>c/o Block No.9 (IC Department), Government Engineering College, Sector-28, Gandhinagar, Gujarat - 382028
+                        <strong>Address : </strong> c/o 130, De La Salle Street, Mutwal 01500 Colombo, Sri Lanka
                     </div>
                     <div class="col-sm-4 links">
                         <div>
@@ -203,7 +203,7 @@
                     <div class="col-sm-4 footer-social">
                         <a href="#!"><i class="fa fa-facebook" aria-hidden="true"
                                         title="Official Facebook Page"></i></a>
-                        <a href="https://github.com/iiitv"><i class="fa fa-github" aria-hidden="true"
+                        <a href="https://github.com/kasuncfdo"><i class="fa fa-github" aria-hidden="true"
                                                               title="Github Group"></i></a>
                         <a href="#!"><i class="fa fa-linkedin" aria-hidden="true" title="LinkedIn Profile"></i></a>
                         <a href="#!" title=""><i class="fa fa-twitter" aria-hidden="true"
