--- a/School-Layout-Plan.html
+++ b/School-Layout-Plan.html
@@ -169,7 +169,7 @@
         <div class="content">
             <center> <h3><strong>School Layout Plan</strong></h3> </center>
             <br/><br/>
-            <img class="responsive-img" src="img/School Layout-Plan_page.jpg">
+            <img class="responsive-img" src="img/School Layout-Plan_page.png">
         </div>
         </div>
         </div>
