--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                         <ul class="nav navbar-nav">
                                 <li><a href="index.html">Home</a></li>
                             <li>
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">About us <b
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">ABOUT US <b
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
                                     <li><a href="about.html">About</a></li>
