--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     </div>
                     <div class="collapse navbar-collapse">
                         <ul class="nav navbar-nav">
-                                <li><a href="index.html">Home</a></li>
+                                <li><a href="index.html">HOME</a></li>
                             <li>
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">ABOUT US <b
                                         class="caret"></b></a>
@@ -146,7 +146,7 @@
                                 </ul>
                             </li>
                             <li>
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Academics <b
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">ACADEMICS <b
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
                                     <li class="dropdown-submenu">
@@ -183,7 +183,7 @@
                                 </ul>
                             </li>
                             <li>
-                                <a href="obu.html" class="dropdown-toggle" data-toggle="dropdown">OBU <b class="caret"></b></a>
+                                <a href="obu.html" class="dropdown-toggle" data-toggle="dropdown">OLD BOYS UNION <b class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
                                     <li><a href="obu.html">Overview</a></li>
                                     <li><a href="OBU-Constitution.html">OBU Constitution</a></li>
