--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                                 </ul>
                             </li>
                             <li>
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">More <b
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">MORE <b
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
                                     <li><a href="https://en.wikipedia.org/wiki/De_La_Salle_College,_Colombo">Wikipedia</a></li>
@@ -206,7 +206,7 @@
                                     <li><a href="Under_Construction.html">Coming soon</a></li>
                                 </ul>
                             </li>
-                            <li><a href="gallery.html">Photo Gallery</a></li>
+                            <li><a href="gallery.html">GALLERY</a></li>
                         </ul>
                     </div>
                     <!--/.nav-collapse -->
