--- a/index.html
+++ b/index.html
@@ -146,6 +146,16 @@
                                 </ul>
                             </li>
                             <li>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">ADMINISTRATION <b
+                                        class="caret"></b></a>
+                                <ul class="dropdown-menu multi-level">
+                                    <li><a href="directors_message.html">Principal</a></li>
+                                    <li><a href="Under_Construction.html">Deputy Principal</a></li>
+                                    <li><a href="Under_Construction.html">Academic Staff</a></li>
+                                </ul>
+                            </li>
+
+                            <li>
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">ACADEMICS <b
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
@@ -173,7 +183,7 @@
 
                                 </ul>
                             </li>
-                            <li>
+                            <!--li>
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">ADMINISTRATION <b
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
@@ -181,7 +191,7 @@
                                     <li><a href="Under_Construction.html">Deputy Principal</a></li>
                                     <li><a href="Under_Construction.html">Academic Staff</a></li>
                                 </ul>
-                            </li>
+                            </li-->
                             <li>
                                 <a href="obu.html" class="dropdown-toggle" data-toggle="dropdown">OLD BOYS UNION <b class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
