--- a/college-anthem.html
+++ b/college-anthem.html
@@ -224,9 +224,8 @@
                 </br>
 
                     <section>
-                        <div class="elementor-element elementor-element-3aa9ba54 elementor-invisible elementor-widget elementor-widget-wp-widget-media_audio" data-id="3aa9ba54" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeIn&quot;}" data-widget_type="wp-widget-media_audio.default">
                             <div class="elementor-widget-container">
-                                <audio class="wp-audio-shortcode" id="audio-1112-1" preload="none" style="width: 100%;" controls="controls">
+                                <audio preload="none" style="width: 100%;" controls="controls">
                                     <source type="audio/mpeg" src="College Anthem/01-College-Anthem-Voice-3.mp3" />
                                 </audio>
                     
