--- a/college-anthem.html
+++ b/college-anthem.html
@@ -225,7 +225,7 @@
 
                     <section>
                             <div class="elementor-widget-container">
-                                <audio preload="none" style="width: 100%;" controls="controls">
+                                <audio style="width: 100%;" controls="controls">
                                     <source type="audio/mpeg" src="College Anthem/01-College-Anthem-Voice-3.mp3" />
                                 </audio>
                     
