--- a/college-anthem.html
+++ b/college-anthem.html
@@ -224,10 +224,10 @@
                 </br>
 
                     <section>
-                            <div class="elementor-widget-container">
                                 <audio style="width: 100%;" controls="controls">
                                     <source type="audio/mpeg" src="College Anthem/01-College-Anthem-Voice-3.mp3" />
                                 </audio>
+                    </section>
                     
                     	
             </div>
