--- a/college-anthem.html
+++ b/college-anthem.html
@@ -225,7 +225,7 @@
 
                     
                                 <audio controls>
-                                    
+                                    <source src="College Anthem/01-College-Anthem-Voice-3.mp3" type="audio/ogg">
                                     <source src="College Anthem/01-College-Anthem-Voice-3.mp3" type="audio/mpeg">
                                   Your browser does not support the audio element.
                                   </audio>
