--- a/college-anthem.html
+++ b/college-anthem.html
@@ -223,43 +223,12 @@
                     </p>
                 </br>
 
-                <button> start</button>
-  <audio id="myaudio" autoplay>
-    <source src="College Anthem/01-College-Anthem-Voice-3.mp3" type="audio/mpeg"/>
-  </audio>
-  <script>
-
-    var context;
-    window.onload = function() {
-     context = new AudioContext();
-      context.onstatechange = function() {
-        //if you have permissions, the audioContext will transition to 'running' immediately
-        if(context.state == 'running') {
-          play();
-        }
-      }
-    };
-
-    function play() {
-        //ensure the promise is handled here
-        var promise = document.getElementById('myaudio').play();
-        if (promise !== undefined) {
-          promise.then(_ => {
-            console.log("playing");
-          }).catch(error => {
-            // Autoplay was prevented.
-          });
-        }
-    }
-
-    //play after the user interacts with the page
-    document.querySelector('button').addEventListener('click', function() {
-      context.resume().then(function() {
-        play();
-      });
-    });
-
-  </script>       
+                    <section>
+                        <div class="elementor-element elementor-element-3aa9ba54 elementor-invisible elementor-widget elementor-widget-wp-widget-media_audio" data-id="3aa9ba54" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeIn&quot;}" data-widget_type="wp-widget-media_audio.default">
+                            <div class="elementor-widget-container">
+                                <audio class="wp-audio-shortcode" id="audio-1112-1" preload="none" style="width: 100%;" controls="controls">
+                                    <source type="audio/mpeg" src="" />
+                                </audio>
                     
                     	
             </div>
