--- a/college-anthem.html
+++ b/college-anthem.html
@@ -187,7 +187,9 @@
                     <br>
                     <br>
                     
-                    CHORUS:		Let’s stand united, children all, <br>
+                    CHORUS //	
+                    
+                                Let’s stand united, children all, <br>
                     Come weal, come woe, our way <br>
                     And hark to duty’s clarion call <br>
                     Throughout the livelong day. <br>
