--- a/college-anthem.html
+++ b/college-anthem.html
@@ -187,7 +187,7 @@
                     <br>
                     <br>
                     
-                    CHORUS //	
+                    CHORUS //<br>	
                     
                                 Let’s stand united, children all, <br>
                     Come weal, come woe, our way <br>
