--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                                 </ul>
                             </li>
                             <li><a href="gallery.html">GALLERY</a></li>
-                            <li><a href="gallery.html">CONTACT US</a></li>
+                            <li><a href="contact-us.html">CONTACT US</a></li>
                         </ul>
                     </div>
                     <!--/.nav-collapse -->
