--- a/contact-us.html
+++ b/contact-us.html
@@ -305,8 +305,8 @@ body{margin-top:20px;}
           <div class="contact-detail-box">
             <i class="fa fa-th fa-3x text-colored"></i>
             <h4>Get In Touch</h4>
-            <abbr title="Phone">P:</abbr> (123) 456-7890<br>
-            E: <a href="mailto:email@email.com" class="text-muted">email@email.com</a>
+            <abbr title="Phone">P:</abbr> +94 112 522 125<br>
+            E: <a href="mailto:college@delasalle.lk" class="text-muted">college@delasalle.lk</a>
           </div>
         </div><!-- end col -->
 
@@ -316,8 +316,8 @@ body{margin-top:20px;}
             <h4>ADDRESS</h4>
 
             <address>
-            795 Folsom Ave, Suite 600<br>
-            San Francisco, CA 94107<br>
+              130, De La Salle Street,<br>
+              Mutwal 01500 Colombo, Sri Lanka<br>
           </address>
           </div>
         </div><!-- end col -->
