--- a/index.html
+++ b/index.html
@@ -205,6 +205,15 @@
                                 </ul>
                             </li>
                             <li>
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">EXTRA CURRICULAR <b
+                                        class="caret"></b></a>
+                                <ul class="dropdown-menu multi-level">
+                                    <li><a href="directors_message.html">Sports</a></li>
+                                    <li><a href="Under_Construction.html">Clubs & Societies</a></li>
+                                    <li><a href="Under_Construction.html">Highlights & Achievements</a></li>
+                                </ul>
+                            </li>
+                            <li>
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">MORE <b
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
