--- a/index.html
+++ b/index.html
@@ -208,7 +208,12 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">EXTRA CURRICULAR <b
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
-                                    <li><a href="directors_message.html">Sports</a></li>
+                                    <li class="dropdown-submenu">
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Sports</a>
+                                        <ul class="dropdown-menu">
+                                            <li><a href="Under_Construction.html">1</a></li>
+                                        </ul>
+                                    </li>
                                     <li><a href="Under_Construction.html">Clubs & Societies</a></li>
                                     <li><a href="Under_Construction.html">Highlights & Achievements</a></li>
                                 </ul>
