--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                         </ul>
                                     </li>
 
-                                    <li><a href="directors_message.html">Director's Message</a></li>
+                                    <li><a href="directors_message.html">Principal's Message</a></li>
                                     <li><a href="College-Directors.html">College Directors</a></li>
                                     <li><a href="Chronology College History.html">Chronology College History</a></li>
                                     <li><a href="Academics.php.html">Academic Council</a></li>
