--- a/index.html
+++ b/index.html
@@ -113,35 +113,35 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">ABOUT US <b
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
-                                    <li><a href="about.html">About</a></li>
+                                    <li><a href="about.html">OVERVIEW</a></li>
                                     <li class="dropdown-submenu">
-                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">IDENTITY</a>
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">COLLEGE IDENTITY</a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="Identity/mission-vision.html">Vision & Mission</a></li>
-                                            <li><a href="Identity/college-motto-and-flag_colours.html">Flag</a></li>
-                                            <li><a href="Identity/college-crest.html">Crest</a></li>
-                                            <li><a href="college-anthem.html">College Anthem</a></li>
+                                            <li><a href="Identity/mission-vision.html">COLLEGE VISION & MISSION</a></li>
+                                            <li><a href="Identity/college-motto-and-flag_colours.html">COLLEGE FLAG | MOTTO | COLOURS</a></li>
+                                            <li><a href="Identity/college-crest.html">COLLEGE CREST</a></li>
+                                            <li><a href="college-anthem.html">COLLEGE ANTHEM</a></li>
                                         </ul>
                                     </li>
                                     <li class="dropdown-submenu">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">HISTORY AND TRADITIONS</a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="History-and-Location.html">History Of College</a></li>
-                                            <li><a href="The-Coat-of-Arms.html">The-Coat-of-Arms</a></li>
-                                            <li><a href="Chronoloy-College-History.html">Chronology College History</a></li>
-                                            <li><a href="College-Directors.html">Past Recters</a></li>
+                                            <li><a href="History-and-Location.html">HISTORY OF COLLEGE</a></li>
+                                            <li><a href="The-Coat-of-Arms.html">THE-COAT-OF-ARMS</a></li>
+                                            <li><a href="Chronoloy-College-History.html">CHRONOLOGY COLLEGE HISTORY</a></li>
+                                            <li><a href="College-Directors.html">PAST RECTERS</a></li>
                                             <!--li><a href="Identity/tcs.html">TCS</a></li-->
                                         </ul>
                                     </li>
 
-                                    <li><a href="directors_message.html">Principal's Message</a></li>
-                                    <li><a href="College-Directors.html">College Directors</a></li>
-                                    <li><a href="Chronology College History.html">Chronology College History</a></li>
-                                    <li><a href="Academics.php.html">Academic Council</a></li>
-                                    <li><a href="Academic-Progress.html">Academic Progress</a></li>
-                                    <li><a href="Activities-in-Development-Stage.html">Activities in Development Stage</a></li>
-                                    <li><a href="The-Coat-of-Arms.html">The Coat of Arms o  the  De La Salle  Brothers</a></li>
-                                    <li><a href="Bridge-between-the-College-and-the-Old-Boys.html">Bridge between the College and the Old-Boys</a></li>
+                                    <li><a href="directors_message.html">PRINCIPAL'S MESSAGE</a></li>
+                                    <li><a href="College-Directors.html">COLLEGE DIRECTORS</a></li>
+                                    <li><a href="Chronology College History.html">CHRONOLOGY COLLEGE HISTORY</a></li>
+                                    <li><a href="Academics.php.html">ACADEMIC COUNCIL</a></li>
+                                    <li><a href="Academic-Progress.html">ACADEMIC PROGRESS</a></li>
+                                    <li><a href="Activities-in-Development-Stage.html">ACTIVITIES IN DEVELOPMENT STAGE</a></li>
+                                    <li><a href="The-Coat-of-Arms.html">THE COAT OF ARMS O  THE  DE LA SALLE  BROTHERS</a></li>
+                                    <li><a href="Bridge-between-the-College-and-the-Old-Boys.html">BRIDGE BETWEEN THE COLLEGE AND THE OLD-BOYS</a></li>
                                     
                                 </ul>
                             </li>
@@ -149,9 +149,9 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">ADMINISTRATION <b
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
-                                    <li><a href="directors_message.html">Principal</a></li>
-                                    <li><a href="Under_Construction.html">Deputy Principal</a></li>
-                                    <li><a href="Under_Construction.html">Academic Staff</a></li>
+                                    <li><a href="directors_message.html">PRINCIPAL</a></li>
+                                    <li><a href="Under_Construction.html">DEPUTY PRINCIPAL</a></li>
+                                    <li><a href="Under_Construction.html">ACADEMIC STAFF</a></li>
                                 </ul>
                             </li>
 
@@ -179,7 +179,7 @@
                                             </ul>
                                     </li>
                                     <!--li><a href="#">More</a></li-->
-                                    <li><a href="Under_Construction.html">Academic Calender</a></li>
+                                    <li><a href="Under_Construction.html">NON ACADEMIC</a></li>
 
                                 </ul>
                             </li>
@@ -214,8 +214,8 @@
                                             <li><a href="Under_Construction.html">1</a></li>
                                         </ul>
                                     </li>
-                                    <li><a href="Under_Construction.html">Clubs & Societies</a></li>
-                                    <li><a href="Under_Construction.html">Highlights & Achievements</a></li>
+                                    <li><a href="Under_Construction.html">CLUBS & SOCIETIES</a></li>
+                                    <li><a href="Under_Construction.html">HIGHLIGHTS & ACHIEVEMENTS</a></li>
                                 </ul>
                             </li>
                             <li>
