--- a/index.html
+++ b/index.html
@@ -129,13 +129,13 @@
                                             <li><a href="History-and-Location.html">HISTORY OF COLLEGE</a></li>
                                             <li><a href="The-Coat-of-Arms.html">THE-COAT-OF-ARMS</a></li>
                                             <li><a href="Chronoloy-College-History.html">CHRONOLOGY COLLEGE HISTORY</a></li>
-                                            <li><a href="College-Directors.html">PAST RECTERS</a></li>
+                                            <li><a href="College-Directors.html">PAST PRINCIPALS</a></li>
                                             <!--li><a href="Identity/tcs.html">TCS</a></li-->
                                         </ul>
                                     </li>
 
                                     <li><a href="directors_message.html">PRINCIPAL'S MESSAGE</a></li>
-                                    <li><a href="College-Directors.html">COLLEGE DIRECTORS</a></li>
+                                    <li><a href="College-Directors.html">PAST COLLEGE PRINCIPALS</a></li>
                                     <li><a href="Chronology College History.html">CHRONOLOGY COLLEGE HISTORY</a></li>
                                     <li><a href="Activities-in-Development-Stage.html">ACTIVITIES IN DEVELOPMENT STAGE</a></li>
                                     <li><a href="The-Coat-of-Arms.html">THE COAT OF ARMS O  THE  DE LA SALLE  BROTHERS</a></li>
