--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">HISTORY AND TRADITIONS</a>
                                         <ul class="dropdown-menu">
                                             <li><a href="History-and-Location.html">HISTORY OF COLLEGE</a></li>
+                                            <li><a href="college-anthem.html">BRIEF HISTORY OF DE LA SALLE</a></li>
                                             <li><a href="The-Coat-of-Arms.html">THE-COAT-OF-ARMS</a></li>
                                             <li><a href="Chronoloy-College-History.html">CHRONOLOGY COLLEGE HISTORY</a></li>
                                             <li><a href="College-Directors.html">PAST PRINCIPALS</a></li>
