--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
                                         <ul class="dropdown-menu">
                                             <li><a href="History-and-Location.html">HISTORY OF COLLEGE</a></li>
                                             <li><a href="college-anthem.html">BRIEF HISTORY OF DE LA SALLE</a></li>
-                                            <li><a href="The-Coat-of-Arms.html">THE-COAT-OF-ARMS</a></li>
                                             <li><a href="Chronoloy-College-History.html">CHRONOLOGY COLLEGE HISTORY</a></li>
+                                            <li><a href="The-Coat-of-Arms.html">THE-COAT-OF-ARMS</a></li>
                                             <li><a href="College-Directors.html">PAST PRINCIPALS</a></li>
                                             <!--li><a href="Identity/tcs.html">TCS</a></li-->
                                         </ul>
@@ -137,7 +137,7 @@
 
                                     <li><a href="directors_message.html">PRINCIPAL'S MESSAGE</a></li>
                                     <li><a href="College-Directors.html">PAST COLLEGE PRINCIPALS</a></li>
-                                    <li><a href="Chronology College History.html">CHRONOLOGY COLLEGE HISTORY</a></li>
+                                    <!--li><a href="Chronology College History.html">CHRONOLOGY COLLEGE HISTORY</a></li-->
                                     <li><a href="Activities-in-Development-Stage.html">ACTIVITIES IN DEVELOPMENT STAGE</a></li>
                                     <li><a href="The-Coat-of-Arms.html">THE COAT OF ARMS O  THE  DE LA SALLE  BROTHERS</a></li>
                                     <li><a href="Bridge-between-the-College-and-the-Old-Boys.html">BRIDGE BETWEEN THE COLLEGE AND THE OLD-BOYS</a></li>
