--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
                                     <li class="dropdown-submenu">
-                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Sports</a>
+                                        <a href="Sports-and-Games.html" class="dropdown-toggle" data-toggle="dropdown">Sports & Games</a>
                                         <ul class="dropdown-menu">
                                             <li><a href="Under_Construction.html">1</a></li>
                                         </ul>
