--- a/index.html
+++ b/index.html
@@ -209,12 +209,7 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">EXTRA CURRICULAR <b
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
-                                    <li class="dropdown-submenu">
-                                        <a href="Sports-and-Games.html" class="dropdown-toggle" data-toggle="dropdown">Sports & Games</a>
-                                        <ul class="dropdown-menu">
-                                            <li><a href="Under_Construction.html">1</a></li>
-                                        </ul>
-                                    </li>
+                                    <li><a href="Sports-and-Games.html">Sports & Games</a></li>
                                     <li><a href="Under_Construction.html">CLUBS & SOCIETIES</a></li>
                                     <li><a href="Under_Construction.html">HIGHLIGHTS & ACHIEVEMENTS</a></li>
                                 </ul>
