--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">ADMINISTRATION <b
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
+                                    <li><a href="Organizational-Structure.html">OVERVIEW</a></li>
                                     <li><a href="directors_message.html">PRINCIPAL</a></li>
                                     <li><a href="Under_Construction.html">DEPUTY PRINCIPAL</a></li>
                                     <li><a href="Under_Construction.html">ACADEMIC STAFF</a></li>
