--- a/index.html
+++ b/index.html
@@ -210,8 +210,11 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">EXTRA CURRICULAR <b
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
+                                    <li><a href="Co-curiiicular-Activities.html">CURRICULAR ACTIVITIES</a></li>
                                     <li><a href="Sports-and-Games.html">Sports & Games</a></li>
                                     <li><a href="Under_Construction.html">CLUBS & SOCIETIES</a></li>
+                                    <li><a href="announcements.html">Announcements</a></li>
+                                    <li><a href="view-events.html">News & Events</a></li>
                                     <li><a href="Under_Construction.html">HIGHLIGHTS & ACHIEVEMENTS</a></li>
                                 </ul>
                             </li>
