--- a/index.html
+++ b/index.html
@@ -222,6 +222,9 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">MORE <b
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu multi-level">
+                                    <li><a href="announcements.html">Announcements</a></li>
+                                    <li><a href="view-events.html">News & Events</a></li>
+                                    <li><a href="Activities-in-Development-Stage.html">Activities-in-Development-Stage</a></li>
                                     <li><a href="https://en.wikipedia.org/wiki/De_La_Salle_College,_Colombo">Wikipedia</a></li>
                                     <li><a href="Under_Construction.html">Student's Corner</a></li>
                                     <li><a href="Under_Construction.html" target="_blank">Coming soon</a></li>
