--- a/index.html
+++ b/index.html
@@ -136,7 +136,19 @@
                                     </li>
 
                                     <li><a href="directors_message.html">PRINCIPAL'S MESSAGE</a></li>
-                                    <li><a href="College-Directors.html">PAST COLLEGE PRINCIPALS</a></li>
+                                    <li><a href="College-Directors.html">PAST COLLEGE PRINCIPALS</a>
+                                    </li>
+                                    <li class="dropdown-submenu">
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">COLLEGE FACILITIES</a>
+                                        <ul class="dropdown-menu">
+                                            <li><a href="History-and-Location.html">Physical Facilities</a></li>
+                                            <li><a href="BRIEF-HISTORY.html">1</a></li>
+                                            <li><a href="Chronoloy-College-History.html">2</a></li>
+                                            <li><a href="The-Coat-of-Arms.html">2</a></li>
+                                            <li><a href="College-Directors.html">t</a></li>
+                                            <!--li><a href="Identity/tcs.html">TCS</a></li-->
+                                        </ul>
+                                    </li>
                                     <!--li><a href="Chronology College History.html">CHRONOLOGY COLLEGE HISTORY</a></li-->
                                     <li><a href="Activities-in-Development-Stage.html">ACTIVITIES IN DEVELOPMENT STAGE</a></li>
                                     <li><a href="The-Coat-of-Arms.html">THE COAT OF ARMS O  THE  DE LA SALLE  BROTHERS</a></li>
