--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                                     <li class="dropdown-submenu">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">COLLEGE FACILITIES</a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="History-and-Location.html">Physical Facilities</a></li>
+                                            <li><a href="Physical-Facilities.html">Physical Facilities</a></li>
                                             <li><a href="BRIEF-HISTORY.html">1</a></li>
                                             <li><a href="Chronoloy-College-History.html">2</a></li>
                                             <li><a href="The-Coat-of-Arms.html">2</a></li>
