--- a/contact-us.html
+++ b/contact-us.html
@@ -381,7 +381,7 @@ body{margin-top:20px;}
         </div> <!-- end col -->
 
       </div> <!-- end row -->
-          
+</div>
     </div>
     <br>
     <br>
