--- a/contact-us.html
+++ b/contact-us.html
@@ -328,9 +328,9 @@ body{margin-top:20px;}
             <i class="fa fa-book fa-3x text-colored"></i>
             <h4>WEBSITES</h4>
 
-            <p>www.delasalle.lk</p>
-            <p>www.delasalle.lk/OBU</p>
-            <h4 class="text-muted">lasallions.lk</h4>
+            <p>www.delasalle.lk <br>
+             www.delasalle.lk/OBU <br>
+             lasallions.lk</p>
           </div>
         </div><!-- end col -->
 
