--- a/gallery.html
+++ b/gallery.html
@@ -11,18 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/scroll.css">
-    <link rel="stylesheet" type="text/css" href="css/slick.css">
-    <script>
-        import lightGallery from "https://cdn.skypack.dev/lightgallery@2.0.0-beta.3";
-
-import lgZoom from "https://cdn.skypack.dev/lightgallery@2.0.0-beta.3/plugins/zoom";
-
-lightGallery(document.getElementById("gallery-container"), {
-  speed: 500,
-  plugins: [lgZoom]
-});
-
-    </script>
+    <link rel="stylesheet" href="css/magnific-popup.css">
 </head>
 
 <body id="gallery">
